fix image ratio on ie11

--- a/static/css/my.css
+++ b/static/css/my.css
@@ -33,7 +33,7 @@ div#index-figure{
 }
 div#index-figure img{
 	width: 100%;
-	min-width: 200px;
+	min-width: 224px;
 	margin-bottom: 30px;
 	margin-right: 50px;
 }
